# scim-chewing

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  mkinstalldirs  scim-chewing.spec.in
data/: Makefile.am
po/: LINGUAS  POTFILES.in  nl.po  scim-chewing.pot  zh_TW.po
scripts/: git2cl  remove-autotool.sh
src/: Makefile.am  scim_chewing_config_entry.h  scim_chewing_imengine.cpp  scim_chewing_imengine.h  scim_chewing_imengine_setup.cpp  scim_color_button.cpp  scim_color_button.h
